Fix icon align with input.

--- a/src/components/InputNumber/InputNumber.module.css
+++ b/src/components/InputNumber/InputNumber.module.css
@@ -15,7 +15,6 @@
   transition: box-shadow 0.3s ease-in-out;
 
   -moz-appearance: textfield;
-  float: left;
   display: block;
 }
 
